@@ -39,6 +39,7 @@
 -----
 1. (Qt-Only) Dont show clear button for read-only line-edits.
 2. Fix 'Locate In Library' when library is not set to tree mode.
+3. Use grid layout for transcoder slider, removes Qt layout warning.
 
 0.9.1
 -----
